sort.basic.bubble.AlgBubbleSort2.scala.error
Erreur de compilation :
AlgBubbleSort2:7: error: not found: value i
    for(getNombreValeurs()-2 to 0 <- i){
                                     ^AlgBubbleSort2:7: error: not found: value to
    for(getNombreValeurs()-2 to 0 <- i){
                             ^AlgBubbleSort2:7: error: not found: value -
    for(getNombreValeurs()-2 to 0 <- i){
                          ^AlgBubbleSort2:7: error: not found: value getNombreValeurs
    for(getNombreValeurs()-2 to 0 <- i){
        ^AlgBubbleSort2:7: error: not found: value to
    for(getNombreValeurs()-2 to 0 <- i){
                             ^AlgBubbleSort2:7: error: not found: value -
    for(getNombreValeurs()-2 to 0 <- i){
                          ^AlgBubbleSort2:7: error: not found: value getNombreValeurs
    for(getNombreValeurs()-2 to 0 <- i){
        ^AlgBubbleSort2:8: error: not found: value i
      for(j <- 0 to i){
                    ^